Wrap the plugin's avatars (if present) in plugin specific CSS code to prevent theme specific CSS bleeding into the Biography Box.

--- a/css/wp-biographia.css
+++ b/css/wp-biographia.css
@@ -46,6 +46,9 @@
 .wp-biographia-pic img {
 }
 
+.wp-biographia-avatar {
+}
+
 .wp-biographia-text {
 	float: left;
 	margin: 0 0 0 140px;
